--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Description : A simple HTML file .
     </head>
 
     <body>
-        <h1>Welcome to My Awesome Webpage</h1>
+        <h1>Welcome to My Webpage</h1>
         <p>This is a simple HTML document</p>
     </body>
 </html>
