--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ Description : A simple HTML file .
 
     <body>
         <h1>Welcome to My Webpage</h1>
-        <p>This is a simple HTML document</p>
+        <p>This is a very simple HTML document</p>
     </body>
 </html>
