--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Description : A simple HTML file .
 <html>
     <head>
         <title>My Simple HTML Page</title>
+        <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
