--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@ Description : A simple HTML file .
     <body>
         <h1>Welcome to My Webpage</h1>
         <p>This is a very simple HTML document</p>
+        <script src="./index.js"></script>
     </body>
 </html>
