defining the base elements and classes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@ Description : A simple HTML file .
     </head>
 
     <body>
-        <h1>Welcome to My Webpage</h1>
-        <p>This is a very simple HTML document</p>
+        <header id="header">
+            <input type="text">
+            <input type="button">
+        </header>
+        <main id="main">
+            <div class="first-section"><p>First section</p></div>
+            <div class="sectond-section"><p>Second section</p></div>
+            <div class="third-section"><p>Third section</p></div>
+        </main>
+        <footer id="footer">
+            
+        </footer>
+
         <script src="./index.js"></script>
     </body>
 </html>
