Experiment with classes

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@ Description : A simple HTML file .
 
     <body>
         <header id="header">
-            <input type="text">
-            <input type="button">
+            <input type="text" placeholder="Example Text">
+            <input type="button" value="button">
         </header>
         <main id="main">
             <div class="first-section"><p>First section</p></div>
-            <div class="sectond-section"><p>Second section</p></div>
+            <div class="second-section"><p>Second section</p></div>
             <div class="third-section"><p>Third section</p></div>
         </main>
         <footer id="footer">
-            
+            <p>This is the footer</p>
         </footer>
 
         <script src="./index.js"></script>
